--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <div class="from">
                     <p>From</p>
                     <div class="select-container">
-                        <img src="https://flagsapi.com/US/flat/64.png">
+                        <img src="https://flagsapi.com/US/flat/64.png" alt="Country Flag">
                         <select name="from"></select>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                 <div class="to">
                     <p>To</p>
                     <div class="select-container">
-                        <img src="https://flagsapi.com/IN/flat/64.png">
+                        <img src="https://flagsapi.com/IN/flat/64.png" alt="Country Flag">
                         <select name="to"></select>
                     </div>
                 </div>
